Closed Bug 1065866 Opened 10 years ago Closed 10 years ago

[Camera][Gecko] Abort StartRecording while previous call is in progress

Categories

(Firefox OS Graveyard :: Gaia::Camera, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: shinuk153, Assigned: shinuk153)

Details

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/37.0.2062.103 Safari/537.36

Steps to reproduce:

double touching recording start button.


Actual results:

recording error occurred with the message below and camera(preview) stopped.

DOM OnUserError aContext=6, error='GeneralFailure'



Expected results:

aborting another StartRecording call while previous StartRecording is in progress.
NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings.

[Approval Request Comment]
Bug caused by (feature/regressing bug #): camera video recording
User impact if declined: camera test fail
Testing completed: not reproducible
Risk to taking this patch (and alternatives if risky): no
String or UUID changes made by this patch:
Attachment #8487699 - Flags: review?(mhabicher)
Attachment #8487699 - Flags: approval-mozilla-b2g32?
Assignee: nobody → shinuk153
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Shinuk, this looks fine to me. I'll give it an r+ once you configure your hg client to produce landable patches:

https://developer.mozilla.org/en-US/docs/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F
Flags: needinfo?(shinuk153)
Is this a recent camera regression on 2.0 ? If not this is too late to fix in 2.0 and will have to be land on 2.1 branch and get fixed in 2.1
Attachment #8487699 - Attachment is obsolete: true
Attachment #8487699 - Flags: review?(mhabicher)
Attachment #8487699 - Flags: approval-mozilla-b2g32?
Attachment #8488447 - Flags: review?(mhabicher)
Flags: needinfo?(shinuk153)
Comment on attachment 8488447 [details] [diff] [review]
aborting_another_startrecording_call

Review of attachment 8488447 [details] [diff] [review]:
-----------------------------------------------------------------

r+ without a test due to emulator limitations.
Attachment #8488447 - Flags: review?(mhabicher) → review+
https://hg.mozilla.org/mozilla-central/rev/7c8b3cd5e57e
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: