Bug 1065866 - Abort StartRecording while previous call is in progress. r=mikeh