dom/camera/DOMCameraControl.cpp
@@ -647,6 +647,28 @@ nsDOMCameraControl::Capabilities()
   return caps.forget();
 }
 
+class ImmediateErrorCallback : public nsRunnable
+{
+public:
+  ImmediateErrorCallback(CameraErrorCallback* aCallback, const nsAString& aMessage)
+    : mCallback(aCallback)
+    , mMessage(aMessage)
+  { }
+
+  NS_IMETHODIMP
+  Run()
+  {
+    MOZ_ASSERT(NS_IsMainThread());
+    ErrorResult ignored;
+    mCallback->Call(mMessage, ignored);
+    return NS_OK;
+  }
+
+protected:
+  nsRefPtr<CameraErrorCallback> mCallback;
+  nsString mMessage;
+};
+
 // Methods.
 void
 nsDOMCameraControl::StartRecording(const CameraStartRecordingOptions& aOptions,
@@ -657,6 +679,20 @@ nsDOMCameraControl::StartRecording(const CameraStartRecordingOptions& aOptions,
                                    ErrorResult& aRv)
 {
   MOZ_ASSERT(mCameraControl);
+
+  nsRefPtr<CameraStartRecordingCallback> cb = mStartRecordingOnSuccessCb;
+  if (cb) {
+    if (aOnError.WasPassed()) {
+      DOM_CAMERA_LOGT("%s:onError WasPassed\n", __func__);
+      NS_DispatchToMainThread(new ImmediateErrorCallback(&aOnError.Value(),
+                              NS_LITERAL_STRING("StartRecordingInProgress")));
+    } else {
+      DOM_CAMERA_LOGT("%s:onError NS_ERROR_FAILURE\n", __func__);
+      // Only throw if no error callback was passed in.
+      aRv = NS_ERROR_FAILURE;
+    }
+    return;
+  }
 
   NotifyRecordingStatusChange(NS_LITERAL_STRING("starting"));
 
@@ -744,28 +780,6 @@ nsDOMCameraControl::ResumePreview(ErrorResult& aRv)
   MOZ_ASSERT(mCameraControl);
   aRv = mCameraControl->StartPreview();
 }
-
-class ImmediateErrorCallback : public nsRunnable
-{
-public:
-  ImmediateErrorCallback(CameraErrorCallback* aCallback, const nsAString& aMessage)
-    : mCallback(aCallback)
-    , mMessage(aMessage)
-  { }
-  
-  NS_IMETHODIMP
-  Run()
-  {
-    MOZ_ASSERT(NS_IsMainThread());
-    ErrorResult ignored;
-    mCallback->Call(mMessage, ignored);
-    return NS_OK;
-  }
-
-protected:
-  nsRefPtr<CameraErrorCallback> mCallback;
-  nsString mMessage;
-};
 
 void
 nsDOMCameraControl::SetConfiguration(const CameraConfiguration& aConfiguration,
